Deployment/myapp.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      name: myapp
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: rrishi633/quartzapp:1.1
