Deployment/ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tls-secret
  backend:
    serviceName: myapp-service
    servicePort: 8080
